# auto-job-linkedin-tracker-app

backend/: .gitignore  Dockerfile  database.py  docker-compose.yml  jobs.db  main.py  models.py  pyproject.toml
backend/static/: style.css
backend/templates/: analytics.html  applications.html  dashboard.html  rejections.html
extension/: content.css  content.js  manifest.json  popup.css  popup.html  popup.js
