[project]
name = "job-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for LinkedIn Job Application Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
